--- a/InventarioPro/Client/Pages/Producto/ListProductos.razor
+++ b/InventarioPro/Client/Pages/Producto/ListProductos.razor
@@ -203,8 +203,8 @@
             return;
         }
 
-        string[] cabecerasTabla = { "Id", "Nombre", "Cantidad", "Fecha", "FechaEjecucion" };
-        string[] propiedadesMostrar = { "Id", "Nombre", "Cantidad", "Fecha", "FechaEjecucion" };
+        string[] cabecerasTabla = { "Nombre", "Existencia", "FechaCreacion", "Costo", "Precio" };
+        string[] propiedadesMostrar = { "Nombre", "Existencia", "FechaCreacion", "Costo", "Precio" };
 
         using (MemoryStream ms = new MemoryStream())
         {
