--- a/InventarioPro/Client/Shared/MainLayout.razor
+++ b/InventarioPro/Client/Shared/MainLayout.razor
@@ -17,12 +17,12 @@
     <RadzenSidebar @bind-Expanded="@leftSidebarExpanded" Style="grid-area: rz-sidebar; height: 100vh; background-color:#002050; color:white;">
         <RadzenPanelMenu Style="background-color: transparent; color:white;">
             <RadzenPanelMenuItem Text="Home" Icon="home" Path="/" />
-            <RadzenPanelMenuItem Text="Users" Icon="account_box" Path="/Counter"  />
-            <RadzenPanelMenuItem Text="Products" Icon="inventory" Path="/ListProductos" />
-             <RadzenPanelMenuItem Text="ListaEntrada" Icon="inventory" Path="/ListaEntrada" />
-            <RadzenPanelMenuItem Text="Suppliers" Icon="business" />
-            <RadzenPanelMenuItem Text="Orders" Icon="assignment" />
-            <RadzenPanelMenuItem Text="Reports" Icon="assessment" />
+            <RadzenPanelMenuItem Text="Usuarios" Icon="account_box" Path="/Counter"  />
+            <RadzenPanelMenuItem Text="Productos" Icon="inventory" Path="/ListProductos" />
+             <RadzenPanelMenuItem Text="Entrada" Icon="inventory" Path="/ListaEntrada" />
+            <RadzenPanelMenuItem Text="Suplidores" Icon="business" />
+            <RadzenPanelMenuItem Text="Ventas" Icon="assignment" Path="/ListVentas" />
+            <RadzenPanelMenuItem Text="Reportes" Icon="assessment" />
         </RadzenPanelMenu>
     </RadzenSidebar>
 
